gcc/testsuite/rust/rustc/ui/stability-attribute/stability-in-private-module_dg.rs
fn main() {
    let _ = std::sys::os::errno();
// { dg-error ".E0603." "" { target *-*-* } .-1 }
}

